Code cleanup. Fix timing issue on startup where EventManager gets the World object before its added to the Server.worlds. Fix tempban query issue caused by MySQL migration.